package com.swe206.group_two.backend.utils;

public enum TournamentType {
    Elimination,
    RoundRobin
}
