---
title: Tournament Arranger
---
classDiagram
    class Administrator {
        -String id
        -String name
        -String username
        -String email
    }
    Administrator: +createTeam(Tournament, Team) void
    Administrator: +addSport(Sport) void
    Administrator: +archiveTournament(Tournament) void
    Administrator: +createTournament(Tournament) void
    Administrator: +editTournament(Tournament) void
    Administrator: +generateMatches(Tournament) void
    Administrator: +recordMatchScores(Tournament, Match) void
    Administrator: +viewMatchesScores(Tournament, Match) void
    Administrator: +viewParticipantRanking(Tournament) void
    Administrator: +viewParticipantProfile(Student) void
    Administrator: +viewParticipantProfile(Team) void
    Administrator: +viewMatchesSchedule(Tournament) void
    Administrator "1" *-- "*" Tournament: organize
    Administrator "*" -- "1" Sport: add

    class Participant {
        <<abstract>>
        -String id
        -String name
    }
    Participant: +createTeam(Tournament, Team) void
    Participant: +viewMatchesScores(Tournament, Match) void
    Participant: +viewParticipantRanking(Tournament) void
    Participant: +viewMatchesSchedule(Tournament) void
    Participant: +leaveTournament(Tournament) void
    Participant: +registerInTournament(Tournament) void
    Participant: +viewParticipantProfile(Student) void
    Participant: +viewParticipantProfile(Team) void

    class Student {
        -String id
        -String username
        -String email
    }
    Student: +viewStudentProfile() void
    Participant <|-- Student: exetnds

    class Team {
        -String id
        -List~Student~ students
        -Tournament tournamentParticipatingIn
    }
    Administrator "1" -- "*" Team: create

    class Sport {
        -String id
        -String name
    }
    Participant <|-- Team: exetnds
    Participant "*" -- "*" Team: create

    class TournamentType {
        <<enumeration>>
        Elimination
        RoundRobin
    }
    TournamentType "1" -- "1" Tournament: type

    class Tournament {
        -String id
        -String name
        -Sport sport
        -ArrayList~Participat~ participats
        -Date startDate
        -Date endDate
        -boolean isArchived
        -boolean isOpen
        -ArrayList~Match~ matches
        -TournamentType type
        -Integer maxStudents
    }
    Tournament: +addParticipant(Participant) void
    Tournament: +closeRegistration() void
    Tournament: +recordMatchScores(Match) void
    Tournament "1" -- "1" Sport: game
    Tournament "1" -- "*" Participant: game

    class Match {
        -String id
        -Date date
        -Participant participantOne
        -Participant participantTwo
        -Tournament tournament
    }
    Match "*" --* "1" Tournament: consist
    Match "*" -- "2" Participant: participate

    class Rank {
        -String id
        -Tournament tournament
        -Participant participant
        -Integer rank
    }
    Tournament "1" -- "*" Rank: ranks
    Rank "1" -- "1" Participant: rank

    class Email {
    }
    Email: +sendConfirmationEmail(Participant, Tournament) void
    Participant "1" -- "1" Email: send email
    Tournament "1" -- "1" Email: fetch info
